# envc

./: .gitignore  LICENSE  README.md
R/: DESCRIPTION  LICENSE  NAMESPACE
R/R/: detect_envc.R
R/tests/: testthat.R
R/tests/testthat/: test-detect_envc.R
python/: pyproject.toml
python/src/envc/: __init__.py  detect.py  patterns.py
python/tests/: test_detect.py
